Revert "Fix unreadable text"
This reverts commit eb14fb6ba75ca79b166518c2b25b49de41ece512.

--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,6 @@
   text-align: center;
 }
 
-.App p {
-  background-color: #000;
-  padding: .5em;
-}
-
 .App-logo {
   height: 50vmin;
   pointer-events: none;
